# LessTriangle

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
src/: main.cpp
src/shader/: cube.frag  geometry.frag  lighting_model.frag  main_frag.frag  main_vert.vert  sdf.frag  sphere.frag  transform.frag
